# cmaketuto

./: README.md
tutorial/quickstart/: CMakeLists.txt  quickstart.md
tutorial/version/: CMakeLists.txt  tuto_version.md  version.cpp
